--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -13,4 +13,8 @@ nav.navbar
         li = link_to 'Home', '#'
 
       ul.nav.navbar-nav.navbar-right
-
+        - if volunteer_signed_in?
+          li = link_to "Sign out", destroy_volunteer_session_path, method: :delete
+        -  else
+          li = link_to "Sign in", new_volunteer_session_path
+          li = link_to "Sign up", new_volunteer_registration_path
