add and route pages - index (list of PPIS centers) and show (details of each center).

--- a/app/views/centers/index.html.erb
+++ b/app/views/centers/index.html.erb
@@ -1,32 +1,20 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Centers</h1>
-
-<table>
+<h2>Current List of PPIS Centers</h2>
+<table border="1px">
+<!--
   <thead>
-    <tr>
-      <th>Content</th>
-      <th>Administrator</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <tr>
+    <th colspan="2">List of PPIS Centers</th>
+  </tr>
+</thead>
+-->
+<tbody>
+<% @centers.each do |center| %>
+  <tr>
+    <td id="center_name"><%= center.name %></td>
+    <td id="details"><%= link_to 'Details', center %></td>
+  </tr>
+<% end %>
+</tbody>
 
-  <tbody>
-    <% @centers.each do |center| %>
-      <tr>
-        <td><%= center.name %></td>
-        <td><%= center.manager_name %></td>
-        <td><%= center.email %></td>
-        <td><%= center.contact_number %></td>
-        <td><%= center.address %></td>
-        <td><%= link_to 'Show', center %></td>
-        <td><%= link_to 'Edit', edit_center_path(center) %></td>
-        <td><%= link_to 'Destroy', center, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Center', new_center_path %>
