--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,12 @@
 <h2>Sign up</h2>
 
+
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+
+  <div><%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true %></div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -20,6 +25,25 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
+  <div><%= f.check_box :is_female, {}, true %> <%= f.label :is_female, "Female" %> </div>
+    <div><%= f.check_box :is_female, {}, false %> <%= f.label :is_female, "Male" %> </div>
+
+  <div><%= f.label :date_of_birth %><br />
+        <%= f.date_select :date_of_birth, autofocus: true %></div>  
+
+  <div><%= f.label :mobile %><br />
+        <%= f.number_field :mobile, autofocus: true %></div>     
+
+  <div><%= f.label :profession %><br />
+        <%= f.text_field :profession, autofocus: true %></div>      
+ 
+  <div><%=f.label :other_talents %><br />
+        <%= f.text_area :other_talents, autofocus: true %></div> 
+  
+  <div><%=f.label :about_me %><br />
+        <%= f.text_area :about_me, autofocus: true %></div> 
+    
 
 
   <div class="actions">
