--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
@@ -30,19 +30,19 @@
     <div><%= f.check_box :is_female, {}, false %> <%= f.label :is_female, "Male" %> </div>
 
   <div><%= f.label :date_of_birth %><br />
-        <%= f.date_select :date_of_birth, autofocus: true %></div>  
+        <%= f.date_select :date_of_birth, {order: [:day, :month, :year]}, {:start_year => Date.today.year - 80} %></div>
 
   <div><%= f.label :mobile %><br />
-        <%= f.number_field :mobile, autofocus: true %></div>     
+        <%= f.telephone_field :mobile %></div>
 
   <div><%= f.label :profession %><br />
-        <%= f.text_field :profession, autofocus: true %></div>      
+        <%= f.text_field :profession %></div>
  
   <div><%=f.label :other_talents %><br />
-        <%= f.text_area :other_talents, autofocus: true %></div> 
+        <%= f.text_area :other_talents %></div>
   
   <div><%=f.label :about_me %><br />
-        <%= f.text_area :about_me, autofocus: true %></div> 
+        <%= f.text_area :about_me %></div>
     
 
 
