--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,23 @@ html lang='en'
     meta http-equiv='X-UA-Compatible' content='IE=edge'
     meta name='viewport' content='width=device-width, initial-scale=1'
     title PPIS
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
   body*app_data class=body_css_class
-    = yield
+    #messages
+      = render partial: 'layouts/flash_message'
+
+    .container#header
+      .row
+        .col-xs-12
+          = render 'layouts/header'
+
+    .container#main
+      = yield
+
+    footer
+      = render 'layouts/footer'
+
+      = render partial: 'layouts/modal'
+      = render partial: 'layouts/javascripts'
