--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div><%= f.label :gender %><br />
-        <%= f.radio_button :is_female, true%><%= f.label "Female" %></div>
-        <%= f.radio_button :is_female, false%><%= f.label "Male" %></div>
+        <%= f.radio_button :gender, true%><%= f.label "Female" %></div>
+        <%= f.radio_button :gender, false%><%= f.label "Male" %></div>
 
   <div><%= f.label :date_of_birth %><br />
         <%= f.date_select :date_of_birth, {order: [:day, :month, :year], :start_year => Date.today.year - 80, :end_year => Date.today.year - 5} %></div>
