reorganise index.html.erb

--- a/app/views/centers/index.html.erb
+++ b/app/views/centers/index.html.erb
@@ -1,12 +1,5 @@
-<h2>Current List of PPIS Centers</h2>
+<h2>Existing List of PPIS Centers</h2>
 <table border="1px">
-<!--
-  <thead>
-  <tr>
-    <th colspan="2">List of PPIS Centers</th>
-  </tr>
-</thead>
--->
 <tbody>
 <% @centers.each do |center| %>
   <tr>
@@ -15,6 +8,4 @@
   </tr>
 <% end %>
 </tbody>
-
 </table>
-
