--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -15,6 +15,7 @@ nav.navbar
       ul.nav.navbar-nav.navbar-right
         - if volunteer_signed_in?
           li = link_to "Sign out", destroy_volunteer_session_path, method: :delete
+          li = link_to "Edit details", edit_volunteer_registration_path
         -  else
           li = link_to "Sign in", new_volunteer_session_path
           li = link_to "Sign up", new_volunteer_registration_path
