--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -42,9 +42,10 @@ h2 Edit = resource_name.to_s.humanize
 
 h3 Cancel my account
 
-  p Unhappy? 
-    br
-  .link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete 
-  
+p Unhappy? 
 
-  .link_to "Back", :back 
+div
+  = link_to 'Cancel my account', registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete 
+  
+div
+  = link_to 'Back', :back 
