--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -3,6 +3,11 @@ h2 Edit = resource_name.to_s.humanize
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| 
   = devise_error_messages! 
 
+  div
+    = f.label :name
+    br
+    = f.text_field :name
+
   div 
     = f.label :email 
     br
@@ -13,6 +18,25 @@ h2 Edit = resource_name.to_s.humanize
     div
       Currently waiting confirmation for: - resource.unconfirmed_email 
   
+  div
+    = f.label :mobile
+    br
+    = f.telephone_field :mobile
+
+  div
+    = f.label :profession
+    br
+    = f.text_field :profession
+
+  div
+    =f.label :other_talents
+    br
+    = f.text_area :other_talents
+
+  div
+    =f.label :about_me
+    br
+    = f.text_area :about_me
 
   div
     = f.label :password 
