--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -36,9 +36,6 @@ h2 Sign up
     = f.radio_button :gender, false
 
   div
-    = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
-
-  div
     = f.label :date_of_birth
     br
     = f.date_select :date_of_birth, {order: [:day, :month, :year], :start_year => Date.today.year - 80, :end_year => Date.today.year - 5}
@@ -52,6 +49,16 @@ h2 Sign up
     = f.label :profession
     br
     = f.text_field :profession
+
+  div
+    = f.label :'Preferred Taget Group'
+    br
+    = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
+
+  div
+    = f.label :'Skills you can offer'
+    br
+    = f.collection_check_boxes :skill_ids, Skill.all, :id, :name
 
   div
     =f.label :other_talents
