--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,4 +1,4 @@
-h2 Edit = resource_name.to_s.humanize 
+h2 Edit your details
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| 
   = devise_error_messages! 
@@ -27,6 +27,16 @@ h2 Edit = resource_name.to_s.humanize
     = f.label :profession
     br
     = f.text_field :profession
+
+  div
+    = f.label :'Preferred Taget Group'
+    br
+    = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
+
+  div
+    = f.label :'Skills you can offer'
+    br
+    = f.collection_check_boxes :skill_ids, Skill.all, :id, :name
 
   div
     =f.label :other_talents
