--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -3,3 +3,6 @@
 <p>You can confirm your account email through the link below:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>Thank you for your interest to be a PPIS Volunteer! We'll contact you if there's any suitable volunteer opportunities.
+In the meantime, do keep a lookout for other volunteer opportunities on our PPIS' volunteer portal.</p>
