--- a/app/views/devise/mailer/confirmation_instructions.html.slim
+++ b/app/views/devise/mailer/confirmation_instructions.html.slim
@@ -1,5 +1,4 @@
-  p 
-    |Welcome #{current_volunteer.name}
+  p Welcome = @email
 
   p You can confirm your account email through the link below:
 
