--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,4 +1,4 @@
-h2 Edit your details
+h2 Edit your details #{current_volunteer.name}
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| 
   = devise_error_messages! 
