--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -51,7 +51,12 @@ h2 Sign up
     = f.text_field :profession
 
   div
-    = f.label :'Preferred Taget Group'
+    = f.label :'Preferred Centers'
+    br
+    = f.collection_check_boxes :center_ids, Center.all, :id, :name
+
+  div
+    = f.label :'Preferred Target Group'
     br
     = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
 
