--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -9,7 +9,7 @@ html
     title HugProperty | Admin
 
     = stylesheet_link_tag 'https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css', media: 'all'
-    = stylesheet_link_tag 'admin', media: 'all'
+    = stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track' => true
 
     /! HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     /! WARNING: Respond.js doesn't work if you view the page via file://
