--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -66,6 +66,10 @@ h2 Sign up
     = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
 
   div
+    = f.label :'Preferred Availability'
+    = f.collection_check_boxes :availability_ids, Availability.all, :id, :name
+
+  div
     = f.label :'Skills you can offer'
     br
     = f.collection_check_boxes :skill_ids, Skill.all, :id, :name
