--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,7 @@ html lang='en'
     meta http-equiv='X-UA-Compatible' content='IE=edge'
     meta name='viewport' content='width=device-width, initial-scale=1'
     title PPIS
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = csrf_meta_tags
+    = stylesheet_link_tag 'application', media: 'all'
 
   body*app_data class=body_css_class
     #messages
