--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -56,21 +56,21 @@ h2 Sign up
     = f.collection_select :highest_education, FormalEducation.all, :id, :name, prompt: true
 
   div
-    = f.label :'Preferred Centers'
+    = f.label :'Preferred Center(s)'
     br
     = f.collection_check_boxes :center_ids, Center.all, :id, :name
 
   div
-    = f.label :'Preferred Target Group'
+    = f.label :'Preferred Target Group(s)'
     br
     = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
 
   div
-    = f.label :'Preferred Availability'
+    = f.label :'Preferred Availability(s)'
     = f.collection_check_boxes :availability_ids, Availability.all, :id, :name
 
   div
-    = f.label :'Skills you can offer'
+    = f.label :'Skill(s) you can offer'
     br
     = f.collection_check_boxes :skill_ids, Skill.all, :id, :name
 
