move admin javascript to its own file

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -54,7 +54,4 @@ html
 
       = render 'layouts/modal'
 
-      = javascript_include_tag 'admin'
-
-    javascript:
-      PPIS.init();
+      = render 'layouts/admin_lte_2/javascripts'
