change admin theme (color)

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -19,7 +19,7 @@ html
 
     = csrf_meta_tags
 
-  body.skin-green.sidebar-mini.fixed*app_data class=body_css_class
+  body.skin-purple.sidebar-mini.fixed*app_data class=body_css_class
 
     .wrapper
 
