--- a/app/views/layouts/admin_lte_2/_sidebar.html.slim
+++ b/app/views/layouts/admin_lte_2/_sidebar.html.slim
@@ -11,5 +11,5 @@ aside.main-sidebar
 
     ul.sidebar-menu
       li.header Manage
-      li = link_to 'Add Volunteer', new_admin_volunteer_path
+      li = link_to 'Volunteers', admin_volunteers_path
 
