--- a/app/views/admin/volunteers/index.html.slim
+++ b/app/views/admin/volunteers/index.html.slim
@@ -1,26 +1,25 @@
-h2 = link_to 'Add new volunteer', new_admin_volunteer_path
+.pull-right
+  = link_to 'Add new volunteer', new_admin_volunteer_path, class: 'btn btn-primary'
 
 h2 list of volunteers
-table.table.table-bordered.table-hover.dataTable
+table.table.table-bordered.table-hover
   thead
     tr
-      th.sorting_asc Name
+      th Name
       th email
       th Profession
       th Skills
       th Certification
       th Other Talents
-      th Details
-      th Edit
-      
+      th
+
   tbody
     - @volunteer.each do |volunteer|
       tr
-        td = volunteer.name
+        td = link_to volunteer.name, admin_volunteer_path(volunteer)
         td = volunteer.email
         td = volunteer.profession
         td = volunteer.skills.map(&:name).to_sentence
         td = volunteer.certifications.map(&:name).to_sentence
         td = volunteer.other_talents
-        td = link_to 'Details', admin_volunteer_path(volunteer)
-        td = link_to 'Edit', edit_admin_volunteer_path(volunteer)
+        td = link_to 'Edit', edit_admin_volunteer_path(volunteer), class: 'btn btn-primary'
