add fields to show view and decorator

--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -20,14 +20,20 @@ ul.nav.nav-tabs
     dd = decorated_volunteer.profession
     dt Highest Education
     dd = decorated_volunteer.formal_education
+    dt Preferred centers
+    dd = decorated_volunteer.centers
+    dt Target Groups
+    dd = decorated_volunteer.target_groups
+    dt Preferred availability
+    dd = decorated_volunteer.availabilities
     dt Skills
     dd = decorated_volunteer.skills
     dt Certification
     dd = decorated_volunteer.certifications
-    dt Target Groups
-    dd = decorated_volunteer.target_groups
     dt Other Talents
     dd = decorated_volunteer.other_talents
+    dt About me
+    dd = decorated_volunteer.about_me
 
 
 = link_to 'Edit', edit_admin_volunteer_path
