add inactive message to show page

--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -1,5 +1,5 @@
-h1 = if @volunteer.deleted_at
-    Account Inactive
+h2 = if @volunteer.deleted_at
+    | Account Inactive
 
 h2 = @volunteer.name
 
