--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -1,41 +1,45 @@
-h2 = if @volunteer.deleted_at
-    | Account Inactive
 
-h2 = @volunteer.name
+- if @volunteer.deleted_at
+    h2 Account Inactive
 
-ul.nav.nav-tabs
-  li.active
-    a Personal Details
-  li
-    a Events
+    h2 = @volunteer.name
 
-- decorate(@volunteer) do |decorated_volunteer|
-  dl.volunteer-details
-    dt Gender
-    dd = decorated_volunteer.gender
-    dt Date of Birth
-    dd = decorated_volunteer.date_of_birth
-    dt Email
-    dd = decorated_volunteer.email
-    dt Mobile
-    dd = decorated_volunteer.mobile
-    dt Profession
-    dd = decorated_volunteer.profession
-    dt Highest Education
-    dd = decorated_volunteer.formal_education
-    dt Preferred centers
-    dd = decorated_volunteer.centers
-    dt Target Groups
-    dd = decorated_volunteer.target_groups
-    dt Preferred availability
-    dd = decorated_volunteer.availabilities
-    dt Skills
-    dd = decorated_volunteer.skills
-    dt Certification
-    dd = decorated_volunteer.certifications
-    dt Other Talents
-    dd = decorated_volunteer.other_talents
-    dt About me
-    dd = decorated_volunteer.about_me
+    h2 = @volunteer.email
 
-= link_to 'Edit', edit_admin_volunteer_path
+    = link_to 'Reactivate', edit_admin_volunteer_path
+
+- else
+
+    h2 = @volunteer.name
+
+    ul.nav.nav-tabs
+      li.active
+        a Personal Details
+      li
+        a Events
+
+    - decorate(@volunteer) do |decorated_volunteer|
+      dl.volunteer-details
+        dt Gender
+        dd = decorated_volunteer.gender
+        dt Date of Birth
+        dd = decorated_volunteer.date_of_birth
+        dt Email
+        dd = decorated_volunteer.email
+        dt Mobile
+        dd = decorated_volunteer.mobile
+        dt Profession
+        dd = decorated_volunteer.profession
+        dt Highest Education
+        dd = decorated_volunteer.formal_education
+        dt Skills
+        dd = decorated_volunteer.skills
+        dt Certification
+        dd = decorated_volunteer.certifications
+        dt Target Groups
+        dd = decorated_volunteer.target_groups
+        dt Other Talents
+        dd = decorated_volunteer.other_talents
+
+    = link_to 'Edit', edit_admin_volunteer_path
+
