add unstaged files

--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -6,7 +6,7 @@
 
     h2 = @volunteer.email
 
-    = link_to 'Reactivate', edit_admin_volunteer_path
+    = link_to 'Reactivate account', method: :reactivate, admin_volunteer  
 
 - else
 
