--- a/app/views/admin/volunteers/edit.html.slim
+++ b/app/views/admin/volunteers/edit.html.slim
@@ -15,10 +15,10 @@ h2 Edit volunteer details
     = f.label :gender
     br
     = f.label 'Female'
-    = f.radio_button :gender, true
+    = f.radio_button :gender, 1
 
     = f.label 'Male'
-    = f.radio_button :gender, false
+    = f.radio_button :gender, 0
 
   div
     = f.label :date_of_birth
@@ -54,6 +54,15 @@ h2 Edit volunteer details
     = f.label :'Preferred Availability'
     br
     = f.collection_check_boxes :availability_ids, Availability.all, :id, :name
+
+  div
+    =f.label :'Would you like to volunteer on a regular bases?'
+    br
+    = f.label 'Yes'
+    = f.radio_button :adhoc, 'false'
+
+    = f.label 'No'
+    = f.radio_button :adhoc, 'true'
   
   div
     = f.label :'Certifications'
@@ -74,6 +83,15 @@ h2 Edit volunteer details
     =f.label :about_me
     br
     = f.text_area :about_me
+
+  div
+    =f.label :'Would you like to recieve email notifications?'
+    br
+    = f.label 'Yes'
+    = f.radio_button :emailNotification, '1'
+
+    = f.label 'No'
+    = f.radio_button :emailNotification, '0'
 
   .actions
     = f.submit
