permit email_notification and adhoc as params

--- a/app/views/admin/volunteers/edit.html.slim
+++ b/app/views/admin/volunteers/edit.html.slim
@@ -88,10 +88,10 @@ h2 Edit volunteer details
     =f.label :'Would you like to recieve email notifications?'
     br
     = f.label 'Yes'
-    = f.radio_button :emailNotification, '1'
+    = f.radio_button :email_notification, '1'
 
     = f.label 'No'
-    = f.radio_button :emailNotification, '0'
+    = f.radio_button :email_notification, '0'
 
   .actions
     = f.submit
