--- a/app/assets/stylesheets/controllers/admin/show.scss
+++ b/app/assets/stylesheets/controllers/admin/show.scss
@@ -1,10 +1,18 @@
-.volunteer-details {
-  dt {
-    float: left;
-    margin-right: 10px;
-    text-align: right;
-    width: 150px;
+body.admin-volunteers-show {
+  .volunteer-details {
+    dt {
+      float: left;
+      margin-right: 10px;
+      text-align: right;
+      width: 150px;
+    }
+  }
+  
+  h2.inactive {
+    color: red;
   }
 
-
+  p {
+  font-size: 30px;
+  }
 }
