--- a/app/views/admin/volunteers/edit.html.slim
+++ b/app/views/admin/volunteers/edit.html.slim
@@ -56,7 +56,7 @@ h2 Edit volunteer details
     = f.collection_check_boxes :availability_ids, Availability.all, :id, :name
 
   div
-    =f.label :'Would you like to volunteer on a regular bases?'
+    = f.label 'Would you like to volunteer on a regular bases?'
     br
     = f.label 'Yes'
     = f.radio_button :adhoc, '0'
@@ -75,7 +75,7 @@ h2 Edit volunteer details
     = f.collection_check_boxes :skill_ids, Skill.all, :id, :name
 
   div
-    =f.label :other_talents
+    = f.label :other_talents
     br
     = f.text_area :other_talents
 
@@ -85,7 +85,7 @@ h2 Edit volunteer details
     = f.text_area :about_me
 
   div
-    =f.label :'Would you like to recieve email notifications?'
+    = f.label 'Would you like to recieve email notifications?'
     br
     = f.label 'Yes'
     = f.radio_button :email_notification, '1'
