add cancel account button to my edit page

--- a/app/views/my/dashboard/index.html.slim
+++ b/app/views/my/dashboard/index.html.slim
@@ -1,4 +1,4 @@
 | here in volunteer dashboard...
 
 br
-= link_to 'Edit', edit_volunteer_registration_path, class: 'btn btn-primary'
+= link_to 'Edit', edit_my_profile_path, class: 'btn btn-primary'
