change to over ride devise destory method

--- a/app/views/my/profiles/edit.html.slim
+++ b/app/views/my/profiles/edit.html.slim
@@ -89,7 +89,7 @@ h3 Cancel my account
 p Unhappy? 
   
 div
-  = link_to 'Cancel my account', cancel_my_account_path, data: { confirm: "Are you sure?" }, method: :delete 
+  = link_to 'Cancel my account', volunteer_registration_path, data: { confirm: "Are you sure?" }, method: :delete 
    
 div
   = link_to 'Back', :back
