add event tabs on volunteer dashboard

--- a/app/views/my/events/new_events.html.slim
+++ b/app/views/my/events/new_events.html.slim
@@ -1,7 +1,7 @@
 h2 Events
 
 ul.nav.nav-tabs
-  li
+  li.active
     a = link_to 'New Events', new_events_my_events_path
 
   li
@@ -9,3 +9,5 @@ ul.nav.nav-tabs
 
   li
     a = link_to 'Past Events', past_events_my_events_path
+
+h2 New events
