--- a/app/views/my/events/past_events.html.slim
+++ b/app/views/my/events/past_events.html.slim
@@ -7,5 +7,6 @@ ul.nav.nav-tabs
   li
     a = link_to 'Upcoming Events', upcoming_events_my_events_path
 
-  li
+  li.active
     a = link_to 'Past Events', past_events_my_events_path
+h2 Past events
