--- a/app/views/my/events/upcoming_events.html.slim
+++ b/app/views/my/events/upcoming_events.html.slim
@@ -4,8 +4,10 @@ ul.nav.nav-tabs
   li
     a = link_to 'New Events', new_events_my_events_path
 
-  li
+  li.active
     a = link_to 'Upcoming Events', upcoming_events_my_events_path
 
   li
     a = link_to 'Past Events', past_events_my_events_path
+
+h2 Upcoming events
