--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -13,7 +13,10 @@
       dd = decorated_event.description
       br
       dt When
-      dd = decorated_event.start_time.strftime('%H:%M') + "-" + decorated_event.end_time.strftime('%H:%M') + " on " + decorated_event.date.strftime('%d %b %Y')
+      dd = decorated_event.when
+      br
+      dt Approx. Duration
+      dd = decorated_event.duration
       br
       dt Location
       dd = decorated_event.location
