--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -15,6 +15,9 @@
       dt When
       dd = decorated_event.when
       br
+      dt Time
+      dd = decorated_event.time
+      br
       dt Approx. Duration
       dd = decorated_event.duration
       br
