--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -29,7 +29,7 @@
   .form-inline
     .form-group
       = f.label :'Date: '
-      = f.date_select :date, {order: [:day, :month, :year], :start_year => Date.today.year , :end_year => Date.today.year + 50}, class: "form-control"
+      = f.text_field :date,  data: { provide: 'datepicker' }
   br
   .form-inline
     .form-group
