--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import 'bootstrap-datepicker3';
+@import 'bootstrap-datetimepicker';
 
 @import 'font-awesome';
 @import 'controllers/**/*';
