add filter by skills

--- a/app/views/admin/volunteers/index.html.slim
+++ b/app/views/admin/volunteers/index.html.slim
@@ -6,6 +6,11 @@ h3 Search by name or email
   = text_field_tag :search, params[:search], placeholder: "Search Volunteers"
   = submit_tag "Search", :name => nil
 
+h3 Search by Skills
+= form_tag(admin_volunteers_path, :method => "get", id: "search-form") do
+  = text_field_tag :filter, params[:skills], placeholder: "Search by skills"
+  = submit_tag "Search", :name => nil
+
 h2 list of volunteers
 table.table.table-bordered.table-hover
   thead
