add .row .col-xs-12 to make it mobile responsive

--- a/app/views/my/events/upcoming_events.html.slim
+++ b/app/views/my/events/upcoming_events.html.slim
@@ -11,23 +11,21 @@ ul.nav.nav-tabs
     a = link_to 'Past Events', past_events_my_events_path
 
 .container
-  h2 Upcoming Events 
-  br
-  br
-    table.table.table-hover
-      thead
-        tr
-          th Event Name
-          th Center
-          th Date
-          th Time
-      tbody
-        - @events.each do |event|
-          - decorate(event) do |decorated_event|
-            tr
-              td= link_to event.event_name, event_path(event)
-              td= event.center.name
-              td= event.date
-              td= decorated_event.time
-
-  br
+  .row
+    .col-xs-12 
+      h2 Upcoming Events 
+      table.table.table-hover
+        thead
+          tr
+            th Event Name
+            th Center
+            th Date
+            th Time
+        tbody
+          - @events.each do |event|
+            - decorate(event) do |decorated_event|
+              tr
+                td= link_to event.event_name, event_path(event)
+                td= event.center.name
+                td= event.date
+                td= decorated_event.time    
