--- a/app/views/my/events/upcoming_events.html.slim
+++ b/app/views/my/events/upcoming_events.html.slim
@@ -1,19 +1,10 @@
-h2 Events
-
-ul.nav.nav-tabs
-  li
-    a = link_to 'New Events', new_events_my_events_path
-
-  li.active
-    a = link_to 'Upcoming Events', upcoming_events_my_events_path
-
-  li
-    a = link_to 'Past Events', past_events_my_events_path
+= render 'tabs', current_tab: 'Upcoming'
 
 .container
   .row
     .col-xs-12 
       h2 Upcoming Events 
+
       table.table.table-hover
         thead
           tr
