--- a/app/views/my/events/past_events.html.slim
+++ b/app/views/my/events/past_events.html.slim
@@ -1,12 +1,3 @@
-h2 Events
+= render 'tabs', current_tab: 'Past'
 
-ul.nav.nav-tabs
-  li
-    a = link_to 'New Events', new_events_my_events_path
-
-  li
-    a = link_to 'Upcoming Events', upcoming_events_my_events_path
-
-  li.active
-    a = link_to 'Past Events', past_events_my_events_path
 h2 Past events
