--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -6,4 +6,5 @@
 @import 'AdminLTE/AdminLTE';
 @import 'AdminLTE/skins/skin-purple';
 
+@import 'bootstrap-datetimepicker';
 @import 'controllers/**/*';
