--- a/app/views/admin/events/index.html.slim
+++ b/app/views/admin/events/index.html.slim
@@ -1,6 +1,6 @@
 .container
   h2 Events 
-  = link_to 'Create New', new_event_path, class: 'btn btn-default'
+  = link_to 'Create New', new_admin_event_path, class: 'btn btn-default'
   br
   br
     table.table.table-hover
@@ -16,8 +16,8 @@
         - @events.each do |event|
           - decorate(event) do |decorated_event|
             tr
-              td= link_to event.event_name, event_path(event)
-              td= link_to 'Edit', edit_event_path(event), class: 'btn btn-default'
+              td= link_to event.event_name, admin_event_path(event)
+              td= link_to 'Edit', edit_admin_event_path(event), class: 'btn btn-default'
               td= event.center.name
               td= event.date
               td= decorated_event.time
