--- a/app/views/layouts/admin_lte_2/_sidebar.html.slim
+++ b/app/views/layouts/admin_lte_2/_sidebar.html.slim
@@ -12,4 +12,5 @@ aside.main-sidebar
     ul.sidebar-menu
       li.header Manage
       li = link_to 'Volunteers', admin_volunteers_path
+      li = link_to 'Events', admin_events_path
 
