refactor volunteer registration / edit page to a partial

--- a/app/views/layouts/_flash_message.html.slim
+++ b/app/views/layouts/_flash_message.html.slim
@@ -10,4 +10,4 @@
     = fa_icon bootstrap_icon('error'), class: 'pull-left'
     button.close aria-hidden='true' data-dismiss='alert' type='button'  &times;
     div
-      /= devise_error_messages!
+      = devise_error_messages!
