--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,115 +1,12 @@
 h2 Sign up
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-
-  .row
-    .form-group
-      .col-xs-12
-        = f.label :name
-        = f.text_field :name, autofocus: true, class: "form-control", placeholder: "full name as per NRIC/FIN"
-  br
-
-  .row
-    .form-group
-      .col-xs-8
-        = f.label :email
-        = f.email_field :email, class: "form-control", placeholder: "a valid email is required for account confirmation."
-      .col-xs-4
-        = f.label :mobile
-        = f.telephone_field :mobile, class: "form-control", placeholder: "include country code"
-  br
-
-  .row
-    .form-group
-      .col-xs-4
-        = f.label :password
-        - if @minimum_password_length
-          = f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "(minimum #{@minimum_password_length} characters)"
-      .col-xs-4
-        = f.label :confirm_password
-        = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "please re-enter"
-  br
-
-  .row
-    .form-group
-      .col-xs-4
-        = f.label :profession
-        = f.text_field :profession, class: "form-control", placeholder: "what do you work as?"
-      .col-xs-4
-        = f.label :highest_education
-        = f.collection_select :formal_education_id, FormalEducation.all, :id, :name, { prompt: true }, class: "form-control"
-  br
-
-  .form-group
-    = f.label :gender
-    br
-    label.radio-inline
-      input#female name="gender" type="radio" value="true" 
-      | Female
-    label.radio-inline
-      input#male name="gender" type="radio" value="false" 
-      | Male
-
-  .form-inline
-    .form-group
-      = f.label :date_of_birth
-      br
-      = f.date_select :date_of_birth, {order: [:day, :month, :year], :start_year => Date.today.year - 80, :end_year => Date.today.year - 5}, class: "form-control"
-  br
-
-  .form-group
-    = f.label :'Certification(s)'
-    = f.collection_check_boxes :certification_ids, Certification.all, :id, :name do |b|
-      .checkbox
-        = b.check_box
-        = b.label
-        
-  .form-group
-    = f.label :'Preferred Center(s)'
-    = f.collection_check_boxes :center_ids, Center.all, :id, :name do |b|
-      .checkbox
-        = b.check_box
-        = b.label
-
-  .form-group
-    = f.label :'Preferred Target Group(s)'
-    = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name do |b|
-      .checkbox
-        = b.check_box
-        = b.label
-
-  .form-group
-    = f.label :'Preferred Availability(s)'
-    = f.collection_check_boxes :availability_ids, Availability.all, :id, :name do |b|
-      .checkbox
-        = b.check_box
-        = b.label
-
-  .form-group
-    = f.label :'Skill(s) you can offer'
-    = f.collection_check_boxes :skill_ids, Skill.all, :id, :name do |b|
-      .checkbox
-        = b.check_box
-        = b.label
-
-  .row
-    .form-group
-      .col-xs-8
-        =f.label :other_talents
-        = f.text_area :other_talents, class: "form-control", placeholder: "please elaborate on your other talent if you have checked the last box (Other)"
-  br
-
-  .row
-    .form-group
-      .col-xs-8
-        =f.label :about_me
-        = f.text_area :about_me, class: "form-control", placeholder: "tell us more about yourself! :)"
+  
+  = render partial: 'devise/registrations/form', locals: { f: f }
   br      
 
   .actions
     .button
       input.btn.btn-default type="submit" value=("Submit") 
-  br
-
+  
 = render "devise/shared/links"
