--- a/app/views/my/profiles/edit.html.slim
+++ b/app/views/my/profiles/edit.html.slim
@@ -3,62 +3,8 @@ h2 Edit your details #{current_volunteer.name}
 
 = form_for @profile, as: :profile, url: my_profile_path, method: :patch do |f|
 
-  div
-    = f.label :name
-    br
-    = f.text_field :name
+  = render partial: 'devise/registrations/form', locals: { f: f }
 
-  div 
-    = f.label :email 
-    br
-    = f.email_field :email, autofocus: true 
-  
-  div
-    = f.label :mobile
-    br
-    = f.telephone_field :mobile
-
-  div
-    = f.label :profession
-    br
-    = f.text_field :profession
-
-  div
-    = f.label :'Highest Education'
-    br
-    = f.collection_select :highest_education, FormalEducation.all, :id, :name, prompt: true
-
-  div
-    = f.label :'Preferred Center(s)'
-    br
-    = f.collection_check_boxes :center_ids, Center.all, :id, :name
-
-  div
-    = f.label :'Preferred Target Group(s)'
-    br
-    = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name
-
-  div
-    = f.label :'Preferred Availability(s)'
-    br
-    = f.collection_check_boxes :availability_ids, Availability.all, :id, :name
-
-
-  div
-    = f.label :'Skill(s) you can offer'
-    br
-    = f.collection_check_boxes :skill_ids, Skill.all, :id, :name
-
-  div
-    = f.label :other_talents
-    br
-    = f.text_area :other_talents
-
-  div
-    =f.label :about_me
-    br
-    = f.text_area :about_me
-    
   div
     = f.label :password
     p
